--- a/MyApp.Application/OrderManagement.Application.csproj
+++ b/MyApp.Application/OrderManagement.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Prueba.Domain\Prueba.Domain.csproj" />
+    <ProjectReference Include="..\Prueba.Domain\OrderManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
