--- a/MyApp.Infrastructure/OrderManagement.Infrastructure.csproj
+++ b/MyApp.Infrastructure/OrderManagement.Infrastructure.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyApp.Application\Prueba.Application.csproj" />
-    <ProjectReference Include="..\Prueba.Domain\Prueba.Domain.csproj" />
+    <ProjectReference Include="..\MyApp.Application\OrderManagement.Application.csproj" />
+    <ProjectReference Include="..\Prueba.Domain\OrderManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
