--- a/MyApp.Presentation/OrderManagement.Presentation.csproj
+++ b/MyApp.Presentation/OrderManagement.Presentation.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyApp.Application\Prueba.Application.csproj" />
-    <ProjectReference Include="..\MyApp.Infrastructure\MyApp.Infrastructure.csproj" />
+    <ProjectReference Include="..\MyApp.Application\OrderManagement.Application.csproj" />
+    <ProjectReference Include="..\MyApp.Infrastructure\OrderManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
