--- a/Prueba.Test/OrderManagement.Test.csproj
+++ b/Prueba.Test/OrderManagement.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyApp.Application\Prueba.Application.csproj" />
-    <ProjectReference Include="..\Prueba.Domain\Prueba.Domain.csproj" />
+    <ProjectReference Include="..\MyApp.Application\OrderManagement.Application.csproj" />
+    <ProjectReference Include="..\Prueba.Domain\OrderManagement.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
